// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SegmentedButton should match selected button snapshot 1`] = `
<scale-segmented-button>
  <mock:shadow-root>
    <div aria-label="segment button with 2" class="segmented-button segmented-button--small" part="segmented-button small" role="group" style="grid-template-columns: repeat(2, 0px);">
      <slot></slot>
    </div>
  </mock:shadow-root>
  <scale-segment adjacent-siblings="right" aria-description-translation="$position $selected" position="1" selected="true" selected-index="-1" size="small">
    Label
  </scale-segment>
  <scale-segment adjacent-siblings="left" aria-description-translation="$position $selected" position="2" selected="true" selected-index="-1" size="small">
    Label
  </scale-segment>
</scale-segmented-button>
`;

exports[`SegmentedButton should match standard snapshot 1`] = `
<scale-segmented-button>
  <mock:shadow-root>
    <div aria-label="segment button with 4" class="segmented-button segmented-button--small" part="segmented-button small" role="group" style="grid-template-columns: repeat(4, 14px);">
      <slot></slot>
    </div>
  </mock:shadow-root>
  <scale-segment adjacent-siblings="" aria-description-translation="$position $selected" position="1" selected="false" selected-index="-1" size="small">
    Label
  </scale-segment>
  <scale-segment adjacent-siblings="" aria-description-translation="$position $selected" position="2" selected="false" selected-index="-1" size="small">
    Label
  </scale-segment>
  <scale-segment adjacent-siblings="" aria-description-translation="$position $selected" position="3" selected="false" selected-index="-1" size="small">
    Label
  </scale-segment>
  <scale-segment adjacent-siblings="" aria-description-translation="$position $selected" position="4" selected="false" selected-index="-1" size="small">
    Label
  </scale-segment>
</scale-segmented-button>
`;
